--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
