--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.18",
     "antd": "^5.16.2",
     "convert-svg-react": "^1.0.0",
+    "material-ui-popup-state": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
