fix linter errors

--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "lint:prettify": "prettier --check \"**/*.{ts,tsx,json,md,css,html,js,jsx}\"",
+    "prettify": "prettier --write \"**/*.{ts,tsx,json,md,css,html,js,jsx}\"",
+    "lint:css": "npx stylelint \"src/**/*.css\"",
+    "lint:js": "npx eslint \"src/**/*.{ts,tsx,js,jsx}\"",
+    "lint": "npm run lint:css && npm run lint:js"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
@@ -35,6 +39,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "gh-pages": "6.1.1",
+    "prettier": "^3.3.2",
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
