--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,5 +1,5 @@
 printWidth: 80
-tabWidth: 4
+tabWidth: 2
 useTabs: false
 semi: true
 singleQuote: true
@@ -8,7 +8,7 @@ trailingComma: all
 bracketSpacing: true
 arrowParens: always
 overrides:
-    - files: '*.scss'
+    - files: '*.css'
       options:
           singleQuote: false
     - files: '*.html'
