--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@mui/material": "^5.15.18",
     "antd": "^5.16.2",
     "convert-svg-react": "^1.0.0",
+    "dompurify": "^3.1.6",
     "material-ui-popup-state": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.1.1"
   },
